# Rust-Authentication-Service

./: .gitignore  Cargo.toml  Makefile  README.md  output.txt
migrations/2024-02-13-221924_create_schools_table/: up.sql
migrations/2024-02-13-224505_update_at_to_nullable/: down.sql  up.sql
migrations/2024-02-14-062228_unique_field/: down.sql  up.sql
src/: main.rs  schema.rs  tables.rs
src/database/: mod.rs  models.rs  postgres.rs
src/helpers/: constants.rs  enums.rs  logger.rs  mod.rs  type_alias.rs  utils.rs
src/interfaces/: database_interface.rs  mod.rs  repository_interface.rs
src/middlewares/: correlation_id_middleware.rs  mod.rs  timer.rs
src/models/: user_model.rs
src/repositories/: auth_repository.rs  mod.rs  user_repository.rs
src/routes/: user_route.rs
src/schemas/: mod.rs  user_schema.rs
src/services/: auth_service.rs  mod.rs  user_services.rs
src/settings/: configs.rs
